--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
 </head>
 
 <body>
+    <header>
+        <!-- !Header -->
+        <div class="nav-bar container flex">
+            <div class="category flex">
+                <ul class="flex">
+                    <li><a href="#">Donna</a></li>
+                    <li><a href="#">Uomo</a></li>
+                    <li><a href="#">Bambini</a></li>
+                </ul>
+            </div>
+            <div class="logo flex"></div>
+            <div class="user-utils flex">
+                <div><a href="#">&star;</a></div>
+                <div><a href="#">&hearts;</a></div>
+                <div><a href="#">&hearts;</a></div>
+            </div>
+        </div>
+
+    </header>
 
 </body>
 
