--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="icon" href="img/Logo boolean.png" type="image/png">
     <meta name="description" content="Online shop">
     <meta name="copyright" content="HTML.it">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css'
+        integrity='sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=='
+        crossorigin='anonymous' />
     <link rel="stylesheet" href="style.css">
     <title>Boolando</title>
 </head>
@@ -25,14 +28,29 @@
             </div>
             <div class="logo flex"></div>
             <div class="user-utils flex">
-                <div><a href="#">&star;</a></div>
-                <div><a href="#">&hearts;</a></div>
-                <div><a href="#">&hearts;</a></div>
+                <i class="fa-regular fa-user"></i>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-bag-shopping"></i>
             </div>
         </div>
-
     </header>
+    <!-- todo Main -->
+    <!-- <main class="container">
+        <section class="row flex">
+            <div class="card"><img src="img/1.webp" alt="img1"></div>
+            <div class="card"><img src="img/2.webp" alt="img2"></div>
+            <div class="card"><img src="img/3.webp" alt="img3"></div> -->
 
+
+
+
+
+    <!-- <div class="card"><img src="#" alt=""></div>
+            <div class="card"><img src="#" alt=""></div>
+            <div class="card"><img src="#" alt=""></div> -->
+
+    </section>
+    </main>
 </body>
 
 </html>
