--- a/index.html
+++ b/index.html
@@ -35,21 +35,90 @@
         </div>
     </header>
     <!-- todo Main -->
-    <!-- <main class="container">
+    <main class="container">
         <section class="row flex">
-            <div class="card"><img src="img/1.webp" alt="img1"></div>
-            <div class="card"><img src="img/2.webp" alt="img2"></div>
-            <div class="card"><img src="img/3.webp" alt="img3"></div> -->
+            <div class="card">
+                <img id="image" src="img/1.webp" alt="img1">
+                <i class="fa-solid fa-heart"></i>
+                <div class="items-description">
+                    <p id="item-firm">Levi's</p>
+                    <h5>RELAXED FIT TEE UNISEX</h5>
+                    <span id="discounted-price">14,99 €</span>
+                    <span id="undiscounted-price"><del>29,99 €</del></span>
+                    <div class="spec">
+                        <span class="discount">-50%</span>
+                        <span class="sustainability">Sostenibilità</span>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img id="image" src="img/2.webp" alt="img1">
+                <i class="fa-solid fa-heart"></i>
+                <div class="items-description">
+                    <p id="item-firm">Guess</p>
+                    <h5>ROSES TEE</h5>
+                    <span id="discounted-price">20,99 €</span>
+                    <span id="undiscounted-price"><del>29,99 €</del></span>
+                    <div class="spec">
+                        <span class="discount">-30%</span>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img id="image" src="img/3.webp" alt="img1">
+                <i class="fa-solid fa-heart"></i>
+                <div class="items-description">
+                    <p id="item-firm">Come Zucchero Filato</p>
+                    <h5>VOGLIA DI COLORI PASTELLO</h5>
+                    <span id="discounted-price">129,99 €</span>
+                    <span id="undiscounted-price"><del>184,99 €</del></span>
+                    <div class="spec">
+                        <span class="discount">-30%</span>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img id="image1" src="img/4.webp" alt="img1">
+                <i class="fa-solid fa-heart"></i>
+                <div class="items-description">
+                    <p id="item-firm">Levi's</p>
+                    <h5>TEE UNISEX</h5>
+                    <span id="discounted-price">14,99 €</span>
+                    <span id="undiscounted-price"><del>29,99 €</del></span>
+                    <div class="spec">
+                        <span class="discount">-50%</span>
+                        <span class="sustainability">Sostenibilità</span>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img id="image" src="img/5.webp" alt="img1">
+                <i class="fa-solid fa-heart"></i>
+                <div class="items-description">
+                    <p id="item-firm">Maya Deluxe</p>
+                    <h5>STRIPE BODICE</h5>
+                    <span id="discounted-price">99,99 €</span>
+                    <div class="spec">
+                        <span id="false" class="discount"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img id="image" src="img/6.webp" alt="img1">
+                <i class="fa-solid fa-heart"></i>
+                <div class="items-description">
+                    <p id="item-firm">Esprit</p>
+                    <h5>MAGLIONE - BLACK</h5>
+                    <span id="discounted-price">14,99 €</span>
+                    <div class="spec">
+                        <span class="sustainability">Sostenibilità</span>
+                    </div>
+                </div>
+            </div>
 
 
 
-
-
-    <!-- <div class="card"><img src="#" alt=""></div>
-            <div class="card"><img src="#" alt=""></div>
-            <div class="card"><img src="#" alt=""></div> -->
-
-    </section>
+        </section>
     </main>
 </body>
 
