--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
             </div>
             <div class="logo flex"></div>
             <div class="user-utils flex">
-                <i class="fa-regular fa-user"></i>
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa-solid fa-bag-shopping"></i>
+                <ul class="flex">
+                    <li><a class="fa-regular fa-user"></a></li>
+                    <li><a class="fa-regular fa-heart"></a></li>
+                    <li><a class="fa-solid fa-bag-shopping"></a></li>
+                </ul>
             </div>
         </div>
     </header>
@@ -39,6 +41,7 @@
         <section class="row flex">
             <div class="card">
                 <img id="image" src="img/1.webp" alt="img1">
+                <img id="secondary-image" src="img/1b.webp" alt="img1b">
                 <i class="fa-solid fa-heart"></i>
                 <div class="items-description">
                     <p id="item-firm">Levi's</p>
@@ -53,6 +56,7 @@
             </div>
             <div class="card">
                 <img id="image" src="img/2.webp" alt="img1">
+                <img id="secondary-image" src="img/2b.webp" alt="img1b">
                 <i class="fa-solid fa-heart"></i>
                 <div class="items-description">
                     <p id="item-firm">Guess</p>
@@ -66,6 +70,7 @@
             </div>
             <div class="card">
                 <img id="image" src="img/3.webp" alt="img1">
+                <img id="secondary-image" src="img/3b.webp" alt="img1b">
                 <i class="fa-solid fa-heart"></i>
                 <div class="items-description">
                     <p id="item-firm">Come Zucchero Filato</p>
@@ -79,6 +84,7 @@
             </div>
             <div class="card">
                 <img id="image1" src="img/4.webp" alt="img1">
+                <img id="secondary-image" src="img/4b.webp" alt="img1b">
                 <i class="fa-solid fa-heart"></i>
                 <div class="items-description">
                     <p id="item-firm">Levi's</p>
@@ -93,6 +99,7 @@
             </div>
             <div class="card">
                 <img id="image" src="img/5.webp" alt="img1">
+                <img id="secondary-image" src="img/5b.webp" alt="img1b">
                 <i class="fa-solid fa-heart"></i>
                 <div class="items-description">
                     <p id="item-firm">Maya Deluxe</p>
@@ -105,6 +112,7 @@
             </div>
             <div class="card">
                 <img id="image" src="img/6.webp" alt="img1">
+                <img id="secondary-image" src="img/6b.webp" alt="img1b">
                 <i class="fa-solid fa-heart"></i>
                 <div class="items-description">
                     <p id="item-firm">Esprit</p>
@@ -115,9 +123,6 @@
                     </div>
                 </div>
             </div>
-
-
-
         </section>
     </main>
 </body>
