--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
             </div>
             <div class="card">
-                <img id="image1" src="img/4.webp" alt="img1">
+                <img id="image" src="img/4.webp" alt="img1">
                 <img id="secondary-image" src="img/4b.webp" alt="img1b">
                 <i class="fa-solid fa-heart"></i>
                 <div class="items-description">
@@ -125,6 +125,30 @@
             </div>
         </section>
     </main>
+
+    <!-- *Footer -->
+    <footer>
+        <div class="container flex">
+            <div class="footer-left">
+                <h3>Boolando S.r.l</h3>
+                <ul class="flex">
+                    <li><a href="#">Informazioni legali</a></li>
+                    <li><a href="#">Informativa privacy</a></li>
+                    <li><a href="#">Diritto di recesso</a></li>
+                </ul>
+            </div>
+            <div class="footer-right flex">
+                <h4>Trovaci anche su</h4>
+                <ul class="flex">
+                    <li><i class="fa-brands fa-twitter"></i></li>
+                    <li><i class="fa-brands fa-facebook"></i></li>
+                    <li><i class="fa-brands fa-instagram"></i></li>
+                    <li><i class="fa-brands fa-pinterest"></i></li>
+                    <li><i class="fa-brands fa-youtube"></i></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
